; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/extr_ad5820.c_ad5820_power_on.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/extr_ad5820.c_ad5820_power_on.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ad5820_device = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ad5820_device*, i32)* @ad5820_power_on to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ad5820_power_on(%struct.ad5820_device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ad5820_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ad5820_device* %0, %struct.ad5820_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ad5820_device*, %struct.ad5820_device** %4, align 8
  %8 = getelementptr inbounds %struct.ad5820_device, %struct.ad5820_device* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @regulator_enable(i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  store i32 %14, i32* %3, align 4
  br label %36

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %15
  %19 = load %struct.ad5820_device*, %struct.ad5820_device** %4, align 8
  %20 = getelementptr inbounds %struct.ad5820_device, %struct.ad5820_device* %19, i32 0, i32 0
  store i32 0, i32* %20, align 4
  %21 = load %struct.ad5820_device*, %struct.ad5820_device** %4, align 8
  %22 = call i32 @ad5820_update_hw(%struct.ad5820_device* %21)
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* %6, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %18
  br label %28

26:                                               ; preds = %18
  br label %27

27:                                               ; preds = %26, %15
  store i32 0, i32* %3, align 4
  br label %36

28:                                               ; preds = %25
  %29 = load %struct.ad5820_device*, %struct.ad5820_device** %4, align 8
  %30 = getelementptr inbounds %struct.ad5820_device, %struct.ad5820_device* %29, i32 0, i32 0
  store i32 1, i32* %30, align 4
  %31 = load %struct.ad5820_device*, %struct.ad5820_device** %4, align 8
  %32 = getelementptr inbounds %struct.ad5820_device, %struct.ad5820_device* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @regulator_disable(i32 %33)
  %35 = load i32, i32* %6, align 4
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %28, %27, %13
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @regulator_enable(i32) #1

declare dso_local i32 @ad5820_update_hw(%struct.ad5820_device*) #1

declare dso_local i32 @regulator_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
